# Fit-DCS

./: CITATION.cff  CMakeLists.txt  README.md  debug.py  homogeneous.ipynb  load.ipynb  pyproject.toml  semi_inf.ipynb  slab.ipynb  t-age.py  test.ipynb
c_lib/: CMakeLists.txt  async_corr.c  bilayer.c
core/: libloader.py
examples/: 1-forward_modeling.ipynb  2-analyzing.ipynb  3-loading.ipynb  load.ipynb  semi_inf.ipynb  slab.ipynb  training.ipynb
examples/data/: tau.npz
examples/data/PRO_025_T2_Occ/: PRO_025_T2_Occm_0000.ASC  PRO_025_T2_Occm_0001.ASC  PRO_025_T2_Occm_0002.ASC  PRO_025_T2_Occm_0003.ASC  PRO_025_T2_Occm_0004.ASC  PRO_025_T2_Occm_0005.ASC  PRO_025_T2_Occm_0006.ASC  PRO_025_T2_Occm_0007.ASC  PRO_025_T2_Occm_0008.ASC  PRO_025_T2_Occm_0009.ASC  PRO_025_T2_Occm_0010.ASC  PRO_025_T2_Occm_0011.ASC  PRO_025_T2_Occm_0012.ASC  PRO_025_T2_Occm_0013.ASC  PRO_025_T2_Occm_0014.ASC  PRO_025_T2_Occm_0015.ASC  PRO_025_T2_Occm_0016.ASC  PRO_025_T2_Occm_0017.ASC  PRO_025_T2_Occm_0018.ASC  PRO_025_T2_Occm_0019.ASC  PRO_025_T2_Occm_0020.ASC  PRO_025_T2_Occm_0021.ASC  PRO_025_T2_Occm_0022.ASC  PRO_025_T2_Occm_0023.ASC  PRO_025_T2_Occm_0024.ASC  PRO_025_T2_Occm_0025.ASC  PRO_025_T2_Occm_0026.ASC  PRO_025_T2_Occm_0027.ASC  PRO_025_T2_Occm_0028.ASC  PRO_025_T2_Occm_0029.ASC  PRO_025_T2_Occm_0030.ASC  PRO_025_T2_Occm_0031.ASC  PRO_025_T2_Occm_0032.ASC  PRO_025_T2_Occm_0033.ASC  PRO_025_T2_Occm_0034.ASC  PRO_025_T2_Occm_0035.ASC  PRO_025_T2_Occm_0036.ASC  PRO_025_T2_Occm_0037.ASC  PRO_025_T2_Occm_0038.ASC  PRO_025_T2_Occm_0039.ASC  (+328 more)
examples/data/hardware_corr/: demo_occ_0000.ASC  demo_occ_0001.ASC  demo_occ_0002.ASC  demo_occ_0003.ASC  demo_occ_0004.ASC  demo_occ_0005.ASC  demo_occ_0006.ASC  demo_occ_0007.ASC  demo_occ_0008.ASC  demo_occ_0009.ASC  demo_occ_0010.ASC  demo_occ_0011.ASC  demo_occ_0012.ASC  demo_occ_0013.ASC  demo_occ_0014.ASC  demo_occ_0015.ASC  demo_occ_0016.ASC  demo_occ_0017.ASC  demo_occ_0018.ASC  demo_occ_0019.ASC  demo_occ_0020.ASC  demo_occ_0021.ASC  demo_occ_0022.ASC  demo_occ_0023.ASC  demo_occ_0024.ASC  demo_occ_0025.ASC  demo_occ_0026.ASC  demo_occ_0027.ASC  demo_occ_0028.ASC  demo_occ_0029.ASC  demo_occ_0030.ASC  demo_occ_0031.ASC  demo_occ_0032.ASC  demo_occ_0033.ASC  demo_occ_0034.ASC  demo_occ_0035.ASC  demo_occ_0036.ASC  demo_occ_0037.ASC  demo_occ_0038.ASC  demo_occ_0039.ASC  (+351 more)
examples/data/software_corr/: 2024-05-07_Pulsatility_forearm.ttbin
examples/yaml/: corr_example.yaml  fit_example.yaml
forward/: common.py  homogeneous_inf.py  homogeneous_inf_slab.py  homogeneous_parallelepiped.py  homogeneous_semi_inf.py
inverse/: fit_homogeneous.py  fit_homogeneous_semi_inf.py  mbl_homogeneous.py  mbl_homogeneous_semi_inf.py
src/fit_dcs/core/: lib_loader.py
src/fit_dcs/forward/: bilayer.py  common.py  homogeneous_inf.py  homogeneous_inf_slab.py  homogeneous_parallelepiped.py  homogeneous_semi_inf.py
src/fit_dcs/inverse/: fit.py  fit_homogeneous.py  mbl_homogeneous.py
src/fit_dcs/scripts/: correlator.py  fitter.py
src/fit_dcs/utils/: data_loaders.py  motion_artifacts.py  noise.py  timetagger.py
t-age/: group_floxy_measurements.py  save_g2.py  t-age.py
utils/: async_corr.c  data_loaders.py  noise.py  timetagger.py
