[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-dcs"
version = "2.1.0"
description = "A Python package for Diffuse Correlation Spectroscopy analysis."
authors = [
    { name = "Marco Nabacino", email = "marco.nabacino@polimi.it" }
]
readme = "README.md"
dependencies = [
    "numpy >=1.20",
    "scipy >=1.8",
    "pandas >=1.3",
    "matplotlib >=3.5",
]

[project.scripts]
fitdcs-corr = "fit_dcs.scripts.correlator:main"
fitdcs-fit = "fit_dcs.scripts.fitter:main"

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fit_dcs = ["lib/*.dll"]