[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-dcs"
version = "2.2.1"
description = "A Python package for Diffuse Correlation Spectroscopy analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Nabacino", email = "marco.nabacino@polimi.it" }
]
readme = "README.md"
dependencies = [
    "numpy >=1.20",
    "scipy >=1.8",
    "matplotlib >=3.5",
    "tqdm"
]

[project.scripts]
fitdcs-corr = "fit_dcs.scripts.correlator:main"
fitdcs-fit = "fit_dcs.scripts.fitter:main"

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fit_dcs = ["lib/*.dll"]